update to latest git snapshot

--- a/syslog-ng4-devel/Makefile
+++ b/syslog-ng4-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	syslog-ng
-DISTVERSION=	4.1.1.145.g6edae6e
+DISTVERSION=	4.1.1.232.g0bb3770
 CATEGORIES=	sysutils
 # using a self generated release tgz as upstream 4.0.1 tgz is broken on FreeBSD
 # see: https://github.com/syslog-ng/syslog-ng/issues/4275
