--- a/syslog-ng4-devel/Makefile
+++ b/syslog-ng4-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	syslog-ng
-DISTVERSION=	4.4.0.88.g5e761f8
+DISTVERSION=	4.4.0.129.g999c979
 CATEGORIES=	sysutils
 # official master site:
 MASTER_SITES=	https://github.com/balabit/syslog-ng/releases/download/syslog-ng-${DISTVERSION}/
