--- a/syslog-ng4-devel/Makefile
+++ b/syslog-ng4-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	syslog-ng
-DISTVERSION=	4.8.0.248.g92c3c38
+DISTVERSION=	4.8.0.279.g9967654
 CATEGORIES=	sysutils
 # official master site:
 MASTER_SITES=	https://github.com/balabit/syslog-ng/releases/download/syslog-ng-${DISTVERSION}/
