--- a/syslog-ng4-devel/Makefile
+++ b/syslog-ng4-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	syslog-ng
-DISTVERSION=	4.8.1.253.g6537d7a
+DISTVERSION=	4.8.1.295.g324fc78
 PORTREVISION=	5
 CATEGORIES=	sysutils
 # official master site:
@@ -237,10 +237,12 @@ PYTHON_MOD_PLIST_FILES=		lib/syslog-ng/python/syslogng-1.0-py%%PYTHON_VER%%.egg-
                 lib/syslog-ng/python/syslogng/modules/s3/__pycache__/__init__%%PYTHON_EXT_SUFFIX%%.pyc \
                 lib/syslog-ng/python/syslogng/modules/s3/__pycache__/compressable_file_buffer%%PYTHON_EXT_SUFFIX%%.pyc \
                 lib/syslog-ng/python/syslogng/modules/s3/__pycache__/s3_destination%%PYTHON_EXT_SUFFIX%%.pyc \
-                lib/syslog-ng/python/syslogng/modules/s3/__pycache__/s3_object%%PYTHON_EXT_SUFFIX%%.pyc \
+                lib/syslog-ng/python/syslogng/modules/s3/__pycache__/s3_object_buffer%%PYTHON_EXT_SUFFIX%%.pyc \
+                lib/syslog-ng/python/syslogng/modules/s3/__pycache__/s3_session_handler%%PYTHON_EXT_SUFFIX%%.pyc \
+                lib/syslog-ng/python/syslogng/modules/s3/s3_object_buffer.py \
+                lib/syslog-ng/python/syslogng/modules/s3/s3_session_handler.py \
                 lib/syslog-ng/python/syslogng/modules/s3/compressable_file_buffer.py \
                 lib/syslog-ng/python/syslogng/modules/s3/s3_destination.py \
-                lib/syslog-ng/python/syslogng/modules/s3/s3_object.py \
                 lib/syslog-ng/python/syslogng/modules/s3/scl/s3.conf
 
 
