--- a/syslog-ng4-devel/Makefile
+++ b/syslog-ng4-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	syslog-ng
-DISTVERSION=	4.10.2.296.g85f05a7
+DISTVERSION=	4.10.2.315.g7569d7d
 CATEGORIES=	sysutils
 # official master site:
 MASTER_SITES=	https://github.com/balabit/syslog-ng/releases/download/syslog-ng-${DISTVERSION}/
